------------------------------------------------------------------------------
  qPython 1.2.0 [2016.01.22]
------------------------------------------------------------------------------

  - API redesign: enable custom serializers & deserializers

------------------------------------------------------------------------------
  qPython 1.1.0 [2015.11.25]
------------------------------------------------------------------------------

  - Compatibility with Python 2.7, 3.3, and 3.4

------------------------------------------------------------------------------
  qPython 1.0.2 [2015.09.03]
------------------------------------------------------------------------------

  - Enhancement: configuration of serialization for single element strings

------------------------------------------------------------------------------
  qPython 1.0.1 [2015.08.11]
------------------------------------------------------------------------------

  - Fix: serialization of indexed Pandas.DataFrames

------------------------------------------------------------------------------
  qPython 1.0.0 [2015.04.10]
------------------------------------------------------------------------------

  - Improve type detection for pandas.Series serialization 

------------------------------------------------------------------------------
  qPython 1.0 RC3 [2015.04.09]
------------------------------------------------------------------------------

  - Fix: bug during handshake with blank username/password 

------------------------------------------------------------------------------
  qPython 1.0 RC2 [2015.01.19]
------------------------------------------------------------------------------

  - Fix: handling of nested lists of homogeneous length
  - Fix: pandas: null representation for strings

------------------------------------------------------------------------------
  qPython 1.0 RC1 [2014.10.22]
------------------------------------------------------------------------------
