@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qPython 1.2.1 [2016.03.29]
+------------------------------------------------------------------------------
+
+  - Fix: QConnection.close() frees linked file object
+
+------------------------------------------------------------------------------
   qPython 1.2.0 [2016.01.22]
 ------------------------------------------------------------------------------
 
